Add chroma.sqlite3 to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,8 @@ env.bak/
 venv.bak/
 Data/transcripts/
 Data/videolinks/
+Rag/db/chroma.sqlite3
+
 # Spyder project settings
 .spyderproject
 .spyproject
