--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ venv.bak/
 Data/transcripts/
 Data/videolinks/
 Rag/db/
-
+Rag/db/chroma.sqlite3
 # Spyder project settings
 .spyderproject
 .spyproject
