--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ Data/transcripts/
 Data/videolinks/
 Rag/db/
 Rag/db/chroma.sqlite3
+Rag.
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -248,6 +249,5 @@ resources/xml_files/*
 config.ini
 flowcess/commons/settings.py
 Rag/db
-*.db
 Rag/chromadb.db/chroma.sqlite3
 Rag/db/*
