Change to prompt/ Dependency issue resolved/ dockarzie

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 pyarrow
-pandas[performance, parquet, aws]
+pandas
 pendulum
 google.generativeai
-langchain
+langchain>=0.3.16,<0.4.0
 langchain_openai
 langchain_chroma
-langchain_community
-chromadb==0.4.8
-pypdf
-flask
-flask_cors
-sentence_transformers
-tqdm
-torch
-transformers
-spacy==3.5.0
-coreferee==1.4.1
+langchain-community>=0.3.16,<0.4.0
+chromadb>=0.4.14
+pypdf==4.2.0
+flask==3.0.1
+flask_cors==3.0.10
+sentence_transformers==3.3.1
+tqdm==4.67.1
+torch==2.5.1
+pydantic>=2.7.4,<3.0.0
