--- a/.dockerignore
+++ b/.dockerignore
@@ -1,36 +1,23 @@
-# Ignore virtual environments and cache
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pyc
-.venv/
-venv/
-__pycache__/
-*.sqlite3-journal
+# Ignore version control
+.git
+.gitignore
 
-# Ignore IDE files
-.idea/
-.vscode/
+# Ignore notebooks
+Notebook/
 
-# Ignore development files
-*.swp
-*.swo
-*.swn
-*.swo
-*.swn
-*.swn
-*.swo
-*.swn
-*.swo
-*.swn
+# Ignore databases and logs
+**/*.db
+**/*.sqlite3
+**/chromadb.db
+**/error_log.txt
 
-# Ignore data files
-chromadb.db
-chroma.sqlite3
-Rag/chromadb.db
-# Ignore setup scripts
-setup.sh
+# Ignore cache
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/*.pyd
 
 # Ignore environment files
 .env
+venv/
+.venv/
