--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pydantic>=2.7.4,<3.0.0
 streamlit
 # PDF Processing
 pypdf==4.2.0
-
+youtube-transcript-api
 # ML/AI Dependencies (with CPU-only versions)
 sentence_transformers==2.3.1
 --extra-index-url https://download.pytorch.org/whl/cpu
