--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ youtube-transcript-api
 sentence_transformers==2.3.1
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.1.0+cpu
-
+langgraph==0.3.34
 gradio
